--- a/application.properties
+++ b/application.properties
@@ -1,2 +1,23 @@
-spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
+spring.application.name=DOO
+#spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
 server.port=8080
+
+##################### Data Base Prop ##########################
+spring.datasource.url=jdbc:mysql://localhost:3306/todo_app
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+### Hibernate
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.use_sql_comments=true
+############################### sfgsegre #####################
+
+
+
+
+############################# FSAFGSGSDFVD  ########################
