--- a/application.properties
+++ b/application.properties
@@ -1,8 +1,10 @@
+#################### DOD application ###################
+
 spring.application.name=DOO
-#spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
 server.port=8080
 
 ##################### Data Base Prop ##########################
+
 spring.datasource.url=jdbc:mysql://localhost:3306/todo_app
 spring.datasource.username=root
 spring.datasource.password=root
